fix spacing for education

--- a/src/components/education-card/education-card.css
+++ b/src/components/education-card/education-card.css
@@ -32,7 +32,7 @@
 }
 
 .education-card-description{
-    width: 475px;
+    width: 540px;
     display: flex;
     flex-direction: column;
     row-gap: 10px;
